# raylib-asteroids

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: components.h.3D1BDF751255064C.idx  entities.cpp.43B88A9F8A1FA1D9.idx  entities.h.14FFA7FAA90C89F5.idx  flecs.c.FAF1798A940DA919.idx  flecs.h.DAE607CB746C5240.idx  main.cpp.32E54C380DB770BE.idx  systems.cpp.51A51B2CDA94198A.idx  systems.h.74583271C95AB698.idx  utils.cpp.90CF49003257D3D7.idx  utils.h.64A44651E09D4085.idx
resources/player/: player.ase
resources/projecties/: laser.ase
src/: main.cpp
src/components/: components.h
src/entities/: entities.cpp  entities.h
src/globals/: globals.cpp  globals.h
src/systems/: systems.cpp  systems.h
src/utils/: utils.cpp  utils.h
